--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,15 @@
         <link rel="stylesheet" href="css/body.css">
     </head>
     <body id="page-top">
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="/__/firebase/7.17.1/firebase-app.js"></script>
+
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+            https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="/__/firebase/7.17.1/firebase-analytics.js"></script>
+
+        <!-- Initialize Firebase -->
+        <script src="/__/firebase/init.js"></script>
         <div id="fb-root"></div>
         <script async defer crossorigin="anonymous" 
            src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v7.0" 
@@ -41,7 +50,7 @@
         </nav>
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/zgs.jpg" alt="">
+                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/logo_new.jpeg" alt="">
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading mb-0">Consultoria e Projetos</h1>
                 <!-- Icon Divider-->
