alter text about

--- a/public/index.html
+++ b/public/index.html
@@ -324,11 +324,12 @@
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
                         <p class="pre-wrap lead">A empresa Zoenio G Siqueira Serviços de Engenharia ME, de nome fantasia ZGS - Consultoria e Projetos, tem sua atuação concentrada na área ambiental, aquilo que se denomina atualmente como “CONSULTORIA AMBIENTAL”,  tanto que seu proprietário e responsável técnico perante o CREA é Engenheiro Agrônomo, com pós- graduação em Engenharia Ambiental (Engº Agrônomo Zoenio Garcia Siqueira). </p>
-                        <p class="pre-wrap lead">A empresa foi instituída oficialmente há cerca de quatro anos, mas seu proprietário vem atuando na área há quase 30 (trinta) anos, seja como funcionário público (até 2013), seja como prestador de serviços a outras empresas, ou como autônomo.</p>
+                        
                     </div>
                     <div class="col-lg-4 mr-auto">
+                        <p class="pre-wrap lead">A empresa foi instituída oficialmente há cerca de quatro anos, mas seu proprietário vem atuando na área há quase 30 (trinta) anos, seja como funcionário público (até 2013), seja como prestador de serviços a outras empresas, ou como autônomo.</p>
                         <p class="pre-wrap lead">A questão ambiental sempre foi muito polêmica, seja em função da preocupação apenas em tempos mais recentes por parte da sociedade em geral, seja pela complexidade de seu arcabouço legal, e esta complexidade sendo corroborada por sua pouca idade.</p>
-                        <p class="pre-wrap lead">Pretendemos, à medida que formos divulgando as atividades de nossa empresa, esclarecermos sobre a legislação ambiental incidente, sempre de maneira clara.</p>
+                        <!-- <p class="pre-wrap lead">Pretendemos, à medida que formos divulgando as atividades de nossa empresa, esclarecermos sobre a legislação ambiental incidente, sempre de maneira clara.</p> -->
                     </div>
                 </div>
             </div>
